[package]
name = "yokai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.0", features = [
    "bevy_winit",
    "bevy_render",
    "bevy_pbr",
    "bevy_core_pipeline",
    "bevy_ui",
    "bevy_text",
    "bevy_asset",
    "bevy_sprite",
    "multi-threaded",
    "png",
    "webgl2",
    "tonemapping_luts",
] }
bevy_ggrs = "0.15.0"
bevy_matchbox = { version = "0.9.0", features = ["ggrs"] }
bytemuck = "1.14.3"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Optimizations taken from https://bevy-cheatbook.github.io/platforms/wasm/size-opt.html
[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
